<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/cafeSolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caf_solo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <TextView
        android:id="@+id/cafeConLeche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caf_con_leche"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cafeCortado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caf_cortado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <Button
        android:id="@+id/button2"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:onClick="incremento3"
        android:text="@string/_incre3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <Button
        android:id="@+id/button6"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:onClick="incremento2"
        android:text="@string/_incre2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="240dp"
        android:onClick="incremento1"
        android:text="@string/_imcre1"
        app:layout_constraintStart_toEndOf="@+id/cantidadCafeSolo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cantidadCafeSolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="248dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/botonDegreSolo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <Button
        android:id="@+id/button"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:onClick="decremeto2"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cafeConLeche"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginStart="48dp"
        android:onClick="decremeto3"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cafeCortado"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <Button
        android:id="@+id/botonDegreSolo"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="240dp"
        android:onClick="decremeto1"
        android:text="-"
        app:layout_constraintStart_toEndOf="@+id/cafeSolo"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>